...
          .map((AppTab tab) => tab.tabRoute)
          .toList(growable: false),
      appBarBuilder: (BuildContext context, TabsRouter tabsRouter) {
        final AppTab activeTab = AppTab.values[tabsRouter.activeIndex];
        return AppBar(
          automaticallyImplyLeading: false,
          title: Text(activeTab.title, key: const Key('home.activeTabTitle')),
          actions: <Widget>[
            IconButton(
              key: const Key('home.logout'),
              tooltip: 'Logout',
              onPressed: demoAuthController.logout,
              icon: const Icon(Icons.logout),
            ),
          ],
        );
...
